--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dev_dependencies:
   flutter_google_places: ^0.3.0
   google_maps_webservice: ^0.0.19
   flutter_polyline_points: ^1.0.0
-  intl: ^0.17.0
+  intl: ^0.18.1
   path_provider: ^2.0.9
   # qr_flutter: ^4.0.0
   # qr_code_scanner: ^0.7.0
@@ -88,6 +88,11 @@ dev_dependencies:
   provider: ^5.0.0
   uuid: ^3.0.7
   cc_avenue: ^1.0.3
+  lottie: ^2.6.0
+
+
+
+
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -124,6 +129,7 @@ flutter:
        - images/outstation.png
        - images/railwaystation.png
        - images/rental.png
+       - images/
 
 
 
